deployment/myhttpserver-gateway.yaml
apiVersion: networking.istio.io/v1beta1
kind: Gateway
metadata:
  name: httpserver-gateway
spec:
  selector:
    istio: ingressgateway # use istio default controller
  servers:
  - port:
      number: 80
      name: http
      protocol: HTTP
    hosts:
    - "*"
---
apiVersion: networking.istio.io/v1beta1
kind: VirtualService
metadata:
  name: httpserver
spec:
  hosts:
  - "*"
  gateways:
  - httpserver-gateway
  http:
  - match:
    - headers:
        tester: 
          prefix: tid
    route:
    - destination:
        host: httpserver
        subset: v2
  - route:
    - destination:
        host: httpserver
        subset: v1
